# vis2attr

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
config/: project.yaml
config/prompts/: default.jinja
config/schemas/: default.yaml
docs/: README.md  api.md  architecture.md  cli.md  configuration.md
src/vis2attr/: __init__.py
src/vis2attr/cli/: __init__.py  analyze.py  main.py  report.py
src/vis2attr/core/: __init__.py  config.py  constants.py  exceptions.py  schemas.py
src/vis2attr/ingest/: __init__.py  fs.py
src/vis2attr/metrics/: __init__.py
src/vis2attr/parse/: __init__.py  base.py  factory.py  json_parser.py  service.py
src/vis2attr/pipeline/: __init__.py  service.py
src/vis2attr/prompt/: __init__.py  base.py  builder.py
src/vis2attr/providers/: __init__.py  base.py  factory.py  mistral.py
src/vis2attr/rules/: __init__.py
src/vis2attr/storage/: __init__.py  base.py  factory.py  files.py  parquet.py
tests/: __init__.py  conftest.py  test_cli_analyze.py  test_core_exceptions.py  test_exception_integration.py  test_ingest_fs.py  test_parse_factory.py  test_parse_json.py  test_parse_service.py  test_pipeline_integration.py  test_pipeline_service.py  test_prompt_builder.py  test_provider_mistral.py  test_storage_factory.py  test_storage_files.py  test_storage_parquet.py
